:recycle: changes to ejs :recycle:

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,7 @@
-</body>
+</main>
 
+<footer></footer>
+<script src="/socket.io/socket.io.js"></script>
+<script src="/js/script.js"></script>
+</body>
 </html>
